@@ -1,3 +1,9 @@
+2006-06-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/27916
+	* testsuite/libgomp.fortran/pr27916-1.f90: New test.
+	* testsuite/libgomp.fortran/pr27916-2.f90: New test.
+
 2006-06-06  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 
 	* config/mingw32/time.c: New file.
